--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,600,300italic&display=swap);
 
-@import url(https://fonts.googleapis.com/css?family=Cormorant:regular,300italic&display=swap);
-
 @import url(https://fonts.googleapis.com/css?family=Spectral:300italic,regular&display=swap);
 
 @import url(https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC:regular&display=swap);
@@ -792,7 +790,7 @@ textarea.input {
 
 .hero__title {
   max-width: 49.375rem;
-  line-height: 100%;
+  line-height: 110%;
   color: #fff;
 }
 
@@ -847,7 +845,20 @@ textarea.input {
 
 .collections__image {
   max-width: 13rem;
-  margin: 0 auto;
+  margin: 0 auto 0.625rem;
+}
+
+.collections__image img {
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.collections__image.hovered img {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .collections__link {
@@ -862,20 +873,6 @@ textarea.input {
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-.collections__image img {
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
-  /* Добавляем анимацию перехода */
-}
-
-.collections__image.hovered img {
-  -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-          transform: scale(1.2);
 }
 
 .feedback {
@@ -1138,6 +1135,382 @@ textarea.input {
   margin-bottom: 2.5rem;
 }
 
+.hero__title span {
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.hero__text {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeInUp;
+          animation-name: fadeInUp;
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+.collections__blockquote._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+          animation-name: fadeIn;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.collections__title._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeInDown;
+          animation-name: fadeInDown;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+            transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+            transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+.collections__item._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeInUp;
+          animation-name: fadeInUp;
+}
+
+.collections__item._watcher-view:nth-child(2) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.collections__item._watcher-view:nth-child(3) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.collections__item._watcher-view:nth-child(4) {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.collections__item._watcher-view:nth-child(5) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.feedback__title._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: slideInDown;
+          animation-name: slideInDown;
+}
+
+@-webkit-keyframes slideInDown {
+  0% {
+    -webkit-transform: translate3d(0, -40%, 0);
+            transform: translate3d(0, -40%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+@keyframes slideInDown {
+  0% {
+    -webkit-transform: translate3d(0, -40%, 0);
+            transform: translate3d(0, -40%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+.feedback__item._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.feedback__item._watcher-view:first-child {
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+}
+
+.feedback__item._watcher-view:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+}
+
+.feedback__item._watcher-view:nth-child(3) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+  -webkit-animation-name: fadeInRight;
+          animation-name: fadeInRight;
+}
+
+.feedback__item._watcher-view:nth-child(4) {
+  -webkit-animation-name: fadeInRight;
+          animation-name: fadeInRight;
+}
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+  }
+}
+
+.blog__item._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+          animation-name: fadeIn;
+}
+
+.blog__item._watcher-view:nth-child(2) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.blog__item._watcher-view:nth-child(3) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.blog__item._watcher-view:nth-child(4) {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.more__box._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.more__box._watcher-view:first-child {
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+}
+
+.more__box._watcher-view:nth-child(2) {
+  -webkit-animation-name: fadeInRight;
+          animation-name: fadeInRight;
+}
+
+.item-prioritise__icon._watcher-view {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: headShake;
+          animation-name: headShake;
+}
+
+@-webkit-keyframes headShake {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  6.5% {
+    -webkit-transform: translateX(-6px) rotateY(-9deg);
+            transform: translateX(-6px) rotateY(-9deg);
+  }
+
+  18.5% {
+    -webkit-transform: translateX(5px) rotateY(7deg);
+            transform: translateX(5px) rotateY(7deg);
+  }
+
+  31.5% {
+    -webkit-transform: translateX(-3px) rotateY(-5deg);
+            transform: translateX(-3px) rotateY(-5deg);
+  }
+
+  43.5% {
+    -webkit-transform: translateX(2px) rotateY(3deg);
+            transform: translateX(2px) rotateY(3deg);
+  }
+
+  50% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes headShake {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  6.5% {
+    -webkit-transform: translateX(-6px) rotateY(-9deg);
+            transform: translateX(-6px) rotateY(-9deg);
+  }
+
+  18.5% {
+    -webkit-transform: translateX(5px) rotateY(7deg);
+            transform: translateX(5px) rotateY(7deg);
+  }
+
+  31.5% {
+    -webkit-transform: translateX(-3px) rotateY(-5deg);
+            transform: translateX(-3px) rotateY(-5deg);
+  }
+
+  43.5% {
+    -webkit-transform: translateX(2px) rotateY(3deg);
+            transform: translateX(2px) rotateY(3deg);
+  }
+
+  50% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
 @media (min-width: 22.5em) {
   .connection__title {
     margin-bottom: 3.125rem;
@@ -1295,18 +1668,6 @@ textarea.input {
   }
 }
 
-@media (max-width: 30em) {
-  .hero__title {
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 30em) and (max-width: 22.5em) {
-  .hero__title {
-    font-size: 1.5rem;
-  }
-}
-
 @media (max-width: 20em) {
   .connection__title {
     margin-bottom: 0.625rem;
@@ -1410,6 +1771,8 @@ textarea.input {
 @media (max-width: 47.99875em) {
   .header__container {
     min-height: 3.4375rem;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -1446,16 +1809,6 @@ textarea.input {
     transition: top 0.6s ease 0s;
     background-color: #fff;
     z-index: 3;
-  }
-
-  .menu__body .menu__body-icon {
-    content: "";
-    position: absolute;
-    top: 1.25rem;
-    right: 1.25rem;
-    width: 1.25rem;
-    height: 1.25rem;
-    background: url("../img/x.svg") no-repeat;
   }
 
   .menu-open .menu__body {
@@ -1663,6 +2016,13 @@ textarea.input {
     margin-bottom: 1.25rem;
   }
 
+  .hero__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 25%;
+  }
+
   .feedback {
     padding-bottom: 3.125rem;
   }
@@ -1721,8 +2081,12 @@ textarea.input {
     margin-bottom: 2.1875rem;
   }
 
+  .hero__title {
+    font-size: 1.75rem;
+  }
+
   .hero__text {
-    font-size: 0.8125rem;
+    font-size: 1rem;
   }
 
   .collections {
@@ -1826,15 +2190,15 @@ textarea.input {
     }
 }
 
-@supports (font-size: clamp( 0.8125rem , -1.25rem  +  9.1666666667vw , 1.5rem )) {
+@supports (font-size: clamp( 1rem , -0.5rem  +  6.6666666667vw , 1.5rem )) {
     .hero__text {
-      font-size: clamp( 0.8125rem , -1.25rem  +  9.1666666667vw , 1.5rem );
+      font-size: clamp( 1rem , -0.5rem  +  6.6666666667vw , 1.5rem );
     }
 }
 
-@supports not (font-size: clamp( 0.8125rem , -1.25rem  +  9.1666666667vw , 1.5rem )) {
+@supports not (font-size: clamp( 1rem , -0.5rem  +  6.6666666667vw , 1.5rem )) {
     .hero__text {
-      font-size: calc(0.8125rem + 0.6875 * (100vw - 22.5rem) / 7.5);
+      font-size: calc(1rem + 0.5 * (100vw - 22.5rem) / 7.5);
     }
 }
 
@@ -1954,36 +2318,16 @@ textarea.input {
 }
 }
 
-@media (min-width: 30em) and (max-width: 48em) {
-@supports (font-size: clamp( 2.5rem , 0.4166666667rem  +  6.9444444444vw , 3.75rem )) {
+@media (min-width: 22.5em) and (max-width: 48em) {
+@supports (font-size: clamp( 1.75rem , -0.0147058824rem  +  7.8431372549vw , 3.75rem )) {
     .hero__title {
-      font-size: clamp( 2.5rem , 0.4166666667rem  +  6.9444444444vw , 3.75rem );
+      font-size: clamp( 1.75rem , -0.0147058824rem  +  7.8431372549vw , 3.75rem );
     }
 }
 
-@supports not (font-size: clamp( 2.5rem , 0.4166666667rem  +  6.9444444444vw , 3.75rem )) {
+@supports not (font-size: clamp( 1.75rem , -0.0147058824rem  +  7.8431372549vw , 3.75rem )) {
     .hero__title {
-      font-size: calc(2.5rem + 1.25 * (100vw - 30rem) / 18);
-    }
-}
-}
-
-@media (max-width: 30em) and (min-width: 30em) {
-  .hero__title {
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 30em) and (min-width: 22.5em) and (max-width: 30em) {
-@supports (font-size: clamp( 1.5rem , -1.5rem  +  13.3333333333vw , 2.5rem )) {
-    .hero__title {
-      font-size: clamp( 1.5rem , -1.5rem  +  13.3333333333vw , 2.5rem );
-    }
-}
-
-@supports not (font-size: clamp( 1.5rem , -1.5rem  +  13.3333333333vw , 2.5rem )) {
-    .hero__title {
-      font-size: calc(1.5rem + 1 * (100vw - 22.5rem) / 7.5);
+      font-size: calc(1.75rem + 2 * (100vw - 22.5rem) / 25.5);
     }
 }
 }
